// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Space (React) > Snapshots > should match snapshot for horizontal space 1`] = `
<div
  class="inline-flex flex-row items-start gap-4"
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
  <div>
    Item 3
  </div>
</div>
`;

exports[`Space (React) > Snapshots > should match snapshot for vertical space 1`] = `
<div
  class="inline-flex flex-col items-center gap-6"
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
  <div>
    Item 3
  </div>
</div>
`;
